# skanjalkar.github.io

./: .gitignore  Cargo.toml  README.md  Trunk.toml  blog.json  config.json  index.html  index_leptos.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
blog/About-me/: index.html
src/: app.rs  lib.rs  main.rs
src/api/: blog.rs  github.rs  mod.rs
src/components/: blog_card.rs  footer.rs  icons.rs  layout.rs  loading.rs  mod.rs  project_card.rs  sidebar.rs  theme_toggle.rs
src/models/: blog.rs  mod.rs  profile.rs  project.rs
src/pages/: blog.rs  blog_post.rs  home.rs  mod.rs  not_found.rs  projects.rs  terminal.rs
src/state/: mod.rs
src/utils/: markdown.rs  mod.rs  storage.rs
static/: blog-posts.json
styles/: input.css
