[package]
name = "skanjalkar-portfolio"
version = "0.1.0"
edition = "2021"
description = "Personal portfolio website built with Leptos and Rust"
authors = ["Shreyas Kanjalkar <skanjalkar3@gatech.edu>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }

# Web APIs
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Storage",
    "console",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# HTTP client for GitHub API
gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Markdown parsing for blog posts
pulldown-cmark = "0.9"

# Logging
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3